--- a/webdev/projects/grocerylist/index.html
+++ b/webdev/projects/grocerylist/index.html
@@ -8,44 +8,55 @@
     <title>Grocery-list</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap">
+    <!--delete-->
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0">
-    <!--delete-->
-
+    <!-- done -->
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 
 <body>
     <header class="heading">
         Grocery-list
     </header>
-    <section class="input">
-        <div class="add-item">
-            <p class="label-item">Item</p>
-            <div class="groc-warning hide-groc-warn">Please enter item </div>
-            <input type="text" class="groc-input-box" placeholder="Add Grocery">
-
-        </div>
-        <div class="quantity">
-            <p class="label-quant">Quantity</p>
-            <div class="quant-warning hide-quant-warn">Please specify quantity
+    <div class="grocery-project">
+        <section class="input">
+            <div class="add-item">
+                <p class="label-item">Item</p>
+                <div class="groc-warning hide-groc-warn">Please enter a item </div>
+                <input type="text" class="groc-input-box" placeholder="Add Grocery">
 
             </div>
-            <input type="number" class="quant-input-box" placeholder="number of each item">
-        </div>
-        <button class="add-btn">Add</button>
-    </section>
-    <main class="list-display">
-        <div class="reminder">still need to buy (0)
+            <div class="quantity">
+                <p class="label-quant">Quantity</p>
+                <div class="quant-warning hide-quant-warn">Please specify quantity
 
-        </div>
-        <div class="grocery-list">
-            <ul class="list-of-items"></ul>
-        </div>
-        <div class="info">In Cart (0)</div>
-        <div class="bought-list">
-            <ul class="list-of-cart"></ul>
-        </div>
-    </main>
+                </div>
+                <input type="number" class="quant-input-box" placeholder="number of each item">
+            </div>
+            <button class="add-btn">Add</button>
+        </section>
+        <main class="list-display">
+            <div class="reminder"> Grocery List
+
+            </div>
+            <div class="grocery-list">
+                <ul class="list-of-items">
+                </ul>
+            </div>
+            <div class="info">In Cart</div>
+            <div class="bought-list">
+                <ul class="list-of-cart">
+
+                </ul>
+            </div>
+            <footer class="delete-all">
+                delete all items
+            </footer>
+        </main>
+    </div>
+
     <script src="script.js">
 
     </script>
